# wml

./: Cargo.toml  README.md
src/: generate_launch_script.rs  init.rs  installer.rs  launcher_profile.rs  lib_get_fabric.rs  lib_get_forgelike.rs  main.rs
