[package]
name = "wml"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json","stream"] }
futures-util = "0.3.31"
zip = "4.3.0"
walkdir = "2.4"
sha1 = "0.10.6"
futures = "0.3.31"
dirs = "6.0.0"
regex = "1.11.1"

[profile.release]
opt-level = "z"        
strip = true           
lto = true            
codegen-units = 1    
panic = "abort"   
